add old numpy useful snipets codes list and NameTuples practice codes

--- a/Coordinate search descent.ipynb
+++ b/Coordinate search descent.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ~/dev/pydev/Jupyter/ml/settings.ipynb"
+    "%run ~/dev/pydev/Jupyter/ml/settings.ipynb\n",
+    "import autograd.numpy as np  "
    ]
   },
   {
@@ -200,10 +201,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-254-93bb25f6a448>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-254-93bb25f6a448>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    plt.plot(*[[i,g(i)] in i for np.linspace(-5,5,50)])\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = lambda w: np.tanh(w)\n",
+    "plt.plot(*)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-256-11fc295c1e39>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-256-11fc295c1e39>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [[i,g(i)] in i for np.linspace((-5,5,50))]\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "[[i,g(i)] in i for np.linspace(-5,5,50)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-5.0, -0.9999092042625951],\n",
+       " [-4.795918367346939, -0.9998634415507954],\n",
+       " [-4.591836734693878, -0.9997946159642279],\n",
+       " [-4.387755102040816, -0.999691107575254],\n",
+       " [-4.183673469387755, -0.9995354456794231],\n",
+       " [-3.979591836734694, -0.9993013676153218],\n",
+       " [-3.7755102040816326, -0.9989494050572058],\n",
+       " [-3.571428571428571, -0.9984202681165271],\n",
+       " [-3.36734693877551, -0.9976249455842615],\n",
+       " [-3.163265306122449, -0.9964299299508876],\n",
+       " [-2.9591836734693877, -0.9946352534407366],\n",
+       " [-2.7551020408163263, -0.9919420332830022],\n",
+       " [-2.5510204081632653, -0.9879049562527997],\n",
+       " [-2.3469387755102042, -0.9818637011172895],\n",
+       " [-2.142857142857143, -0.9728461661125113],\n",
+       " [-1.9387755102040813, -0.9594367963458108],\n",
+       " [-1.7346938775510203, -0.939608189243296],\n",
+       " [-1.5306122448979593, -0.9105293071885276],\n",
+       " [-1.3265306122448979, -0.8683988338721091],\n",
+       " [-1.1224489795918364, -0.8084190680766979],\n",
+       " [-0.9183673469387754, -0.725124135103691],\n",
+       " [-0.7142857142857144, -0.6133572603953826],\n",
+       " [-0.5102040816326525, -0.470104194194287],\n",
+       " [-0.3061224489795915, -0.29690544684776476],\n",
+       " [-0.1020408163265305, -0.10168812436848526],\n",
+       " [0.1020408163265305, 0.10168812436848526],\n",
+       " [0.3061224489795915, 0.29690544684776476],\n",
+       " [0.5102040816326534, 0.47010419419428773],\n",
+       " [0.7142857142857144, 0.6133572603953826],\n",
+       " [0.9183673469387754, 0.725124135103691],\n",
+       " [1.1224489795918373, 0.8084190680766983],\n",
+       " [1.3265306122448983, 0.8683988338721093],\n",
+       " [1.5306122448979593, 0.9105293071885276],\n",
+       " [1.7346938775510203, 0.939608189243296],\n",
+       " [1.9387755102040813, 0.9594367963458108],\n",
+       " [2.1428571428571432, 0.9728461661125113],\n",
+       " [2.3469387755102042, 0.9818637011172895],\n",
+       " [2.5510204081632653, 0.9879049562527997],\n",
+       " [2.755102040816327, 0.9919420332830023],\n",
+       " [2.959183673469388, 0.9946352534407366],\n",
+       " [3.163265306122449, 0.9964299299508876],\n",
+       " [3.36734693877551, 0.9976249455842615],\n",
+       " [3.571428571428571, 0.9984202681165271],\n",
+       " [3.775510204081632, 0.9989494050572058],\n",
+       " [3.979591836734695, 0.9993013676153218],\n",
+       " [4.183673469387756, 0.9995354456794231],\n",
+       " [4.387755102040817, 0.999691107575254],\n",
+       " [4.591836734693878, 0.9997946159642279],\n",
+       " [4.795918367346939, 0.9998634415507954],\n",
+       " [5.0, 0.9999092042625951]]"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "([[i,g(i)] for i in np.linspace(-5,5,50)])"
+   ]
   }
  ],
  "metadata": {
