--- a/numpy:scipy/Misc.ipynb
+++ b/numpy:scipy/Misc.ipynb
@@ -3134,16 +3134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4729422232, 4729422232]"
+       "[47793491808, 47793491808]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3176,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3185,7 +3185,7 @@
        "[(0, 1), (2, 3), (4, 5), (6, 7), (8, 9)]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3217,7 +3217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -3226,7 +3226,7 @@
        "[(1, 'a'), (2, 'b'), (3, 'c')]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3323,22 +3323,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(20, 20), (20, 1), (1, 1)]"
+       "[([20, 1], [20, 1]), ([20, 1], [4, 5]), ([4, 5], [4, 5])]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(it.combinations_with_replacement([20,1], 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[([0, 1], [2, 3])]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(it.combinations([[0,1],[2,3]], 2))# combination from two set hopefully but not."
    ]
   },
   {
@@ -4671,7 +4691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -5216,28 +5236,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'4'"
+       "'4HI!'"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inc = lambda i: i + 1\n",
-    "compose(str, inc)(3)"
+    "f_1 = lambda i: i + 1\n",
+    "f_2 = lambda i: str(i) + 'HI!'\n",
+    "compose(f_2, f_1)(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -5246,7 +5267,7 @@
        "4"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5254,8 +5275,8 @@
    "source": [
     "from toolz.curried import do\n",
     "log = []\n",
-    "inc = lambda x: x + 2\n",
-    "inc = compose(inc, do(log.append))\n",
+    "f = lambda x: x + 2\n",
+    "inc = compose(f, do(log.append))\n",
     "inc(2)"
    ]
   },
@@ -5281,7 +5302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -5295,7 +5316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5304,7 +5325,7 @@
        "6"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
