--- a/Coordinate search descent.ipynb
+++ b/Coordinate search descent.ipynb
@@ -529,12 +529,7 @@
     "    cost_history = [g(*w)]          # container for corresponding cost function history\n",
     "    for k in range(max_its):\n",
     "        # evaluate the gradient, store current weights and cost function value\n",
-    "        #print(w)\n",
     "        grad_eval = gradient(*w)\n",
-    "\n",
-    "        # take gradient descent step\n",
-    "\n",
-    "        #this is not the way to implement magnitude of gradient\n",
     "        if normalization is True:\n",
     "            c = 1e-7 # avoid devision by zero\n",
     "            grad_eval = gradient(*w)\n",
@@ -595,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can get out of saddle point by small constnat(s.a. c = 1e-3), but once hit the critical point, then bounce around again."
+    "It can get out of the saddle point by small constnat(s.a. c = 1e-3), but once it hits the critical point, then bounces around global minima."
    ]
   },
   {
@@ -809,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1036,
+   "execution_count": 1065,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,28 +814,31 @@
     "    for k in range(max_its):\n",
     "        taylor = interpolate.approximate_taylor_polynomial(f, w[0], degree=2, scale=1e-1)\n",
     "        #print(taylor[2],taylor[1],'second and first')\n",
+    "        a = alpha\n",
+    "        t1 = taylor[1]\n",
+    "        t2 = taylor[2]\n",
     "        if optimize_type is 'min':\n",
     "            if w[0] > 0: # depending on the sign of weights\n",
-    "                if taylor[2] > 0:\n",
-    "                    w = w - alpha*taylor[1] - alpha*taylor[2]\n",
+    "                if t2 > 0:\n",
+    "                    w = w - a*t1 - a*t2\n",
     "                else:\n",
-    "                    w = w - alpha*taylor[1] + alpha*taylor[2]\n",
+    "                    w = w - a*t1 + a*t2\n",
     "            else :\n",
-    "                if taylor[2] > 0:\n",
-    "                    w = w - alpha*taylor[1] + alpha*taylor[2]\n",
+    "                if t2 > 0:\n",
+    "                    w = w - a*t1 + a*t2\n",
     "                else:\n",
-    "                    w = w - alpha*taylor[1] - alpha*taylor[2]\n",
+    "                    w = w - a*t1 - a*t2\n",
     "        if optimize_type is 'max':\n",
     "            if w[0] > 0:\n",
-    "                if taylor[2] > 0:\n",
-    "                    w = w + alpha*taylor[1] - alpha*taylor[2]\n",
+    "                if t2 > 0:\n",
+    "                    w = w + a*t1 - a*t2\n",
     "                else:\n",
-    "                     w = w + alpha*taylor[1] + alpha*taylor[2]\n",
+    "                    w = w + a*t1 + a*t2\n",
     "            else :\n",
-    "                if taylor[2] > 0:\n",
-    "                    w = w + alpha*taylor[1] + alpha*taylor[2]\n",
+    "                if t2 > 0:\n",
+    "                    w = w + a*t1 + a*t2\n",
     "                else:\n",
-    "                     w = w + alpha*taylor[1] - alpha*taylor[2]\n",
+    "                    w = w + a*t1 - a*t2\n",
     "        weight_history.append(w)\n",
     "        cost_history.append(g(*w))\n",
     "        \n",
@@ -849,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1047,
+   "execution_count": 1066,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1061,
+   "execution_count": 1067,
    "metadata": {},
    "outputs": [
     {
